[package]
name = "tokio-xattr"
version = "0.2.1-alpha.1"
authors = ["Hiroaki Nakamura <hnakamur@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hnakamur/tokio-xattr"
homepage = "https://github.com/hnakamur/tokio-xattr"
documentation = "https://hnakamur.github.io/tokio-xattr/tokio_xattr/"
description = """
Filesystem xattr (extended attributes) API for Tokio.
"""
keywords = ["tokio", "xattr"]
categories = ["asynchronous", "filesystem"]
exclude = [
    "docs/*",
]

[dependencies]
blocking_xattr = { package = "xattr", version = "0.2.2" }

tokio-io = { version = "=0.2.0-alpha.4", features = ["util"] }
tokio-executor = { version = "=0.2.0-alpha.4", features = ["blocking"] }

futures-core-preview = "= 0.3.0-alpha.18"
futures-util-preview = "= 0.3.0-alpha.18"

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.4" }
tokio-test = { version = "=0.2.0-alpha.4" }

rand = "0.7"
tempfile = "3"
